Fix safari overflow bug

--- a/src/assets/styles/6-components.scss
+++ b/src/assets/styles/6-components.scss
@@ -10,7 +10,6 @@
   flex-direction: column;
   position: relative;
   background-image: linear-gradient(90deg, #472B9B 0%, #24164F 100%);
-  overflow: hidden;
 
   &__logo {
     width: 24rem;
@@ -166,13 +165,13 @@
   padding-bottom: 12rem;
   background-image: linear-gradient(89deg, #472B9B 0%, #24164F 100%);
   position: relative;
-  overflow: hidden;
 }
 
 .parallax {
   width: inherit;
   height: inherit;
   flex: 1;
+  overflow: hidden;
 
   &__layer {
     width: 100%;
